nuclearbomb/default/mbo/monitoring-http-route.yaml
---
# Grafana HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mbo-grafana
  namespace: default
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: http
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "mbo-grafana.hiibolt.com"
  rules:
    - backendRefs:
        - name: mbo-grafana
          port: 3000
