nuclearbomb/default/mbo/observability-httproute.yaml
---
# Prometheus HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: default
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: http
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "prometheus.hiibolt.com"
  rules:
    - backendRefs:
        - name: prometheus
          port: 9090

---
# Grafana HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: default
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      sectionName: http
    - name: internal
      namespace: gateway
      sectionName: https
  hostnames:
    - "grafana.hiibolt.com"
  rules:
    - backendRefs:
        - name: grafana
          port: 3000
